2006-03-30  Titus Brown  <t@issola.caltech.edu>

	* Added redirect_error, reset_error to commands.py, and
	  added function 'twill.set_errout'.

	* Added '-n', '--never-fail' option to 'twill-sh'.

	* Fixed a problem with ClientForm.AmbiguityError being raised in
	  bad places.

	* Updated ClientForm to latest.

2006-03-26  Titus Brown  <t@issola.caltech.edu>

	* Updated dns_check with Bob Halley's suggestions.

	* Added docs & (fragile) tests to the dns_check extension module.

	* Added dns_check.py extension module.  No docs/tests yet.

2006-03-25  Titus Brown  <t@issola.caltech.edu>

	* Allowed failure to import setuptools in setup.py.

2006-03-23  Titus Brown  <t@issola.caltech.edu>

	* Major twill/shell.py patch to allow for dynamic addition of 
	  methods to shell objects.

	* RELEASE 0.8.4.

	* Improved extension module docstrings.

	* Added better printout when 'extend_with' is used.

	* Added argparse extension module (Michele Simionato).

2006-03-22  Titus Brown  <t@issola.caltech.edu>

	* Changed __match__ to listen to subgroups. (Leonardo Santagada).

	* Added Stephen Thorne's fix for multiple checkboxes with the same
	  name/different values.

2006-03-21  Titus Brown  <t@issola.caltech.edu>

	* Added 'acknowledge_equiv_refresh' option & added helpful
	  error message on infinite refresh detection (Leonardo Santagada).

	* Added in Stephen Thorne's fix for readonly-controls printout.

	* Added in Stephen Thorne's checkbox test & added 'on'/'off' for
	  checkbox stuff.

	* Added in Stephen Thorne's "with_default_realm" auth patch.

2006-03-17  Titus Brown  <t@issola.caltech.edu>

	* Added in Jeff Martin's ${variable} expansion patch.

	* List values can now be selected/deselected with +/-.

	* Checkboxes can now be set with True or a non-zero number, and
	  cleared with a False or '0'.

	* Switched over to using 'require success' instead of code 200
	  on some scripts.

	* Fixed a number of unknown options ;).

	* 'config' now fails on unknown options.
