@@ -39,7 +39,8 @@ regular expression.</p>
 <p><strong>echo</strong> <em>&lt;string&gt;</em> -- echo the string to the screen.</p>
 <p><strong>redirect_output</strong> <em>&lt;filename&gt;</em> -- append all twill output to the given file.</p>
 <p><strong>reset_output</strong> -- display all output to the screen.</p>
-<p><strong>save_html</strong> <em>&lt;filename&gt;</em> -- save the current page's HTML into a file.</p>
+<p><strong>save_html</strong> <em>[&lt;filename&gt;]</em> -- save the current page's HTML into a file.  If
+no filename is given, derive the filename from the URL.</p>
 <p><strong>show</strong> -- show the current page's HTML.  When called from Python, this function will also return a string containing the HTML.</p>
 <p><strong>showlinks</strong> -- show all of the links on the current page.  When called from Python, this function returns a list of the link objects.</p>
 <p><strong>showforms</strong> -- show all of the forms on the current page.  When called from Python, this function returns a list of the forms.</p>
