@@ -1,3 +1,8 @@
+2006-04-13  Titus Brown  <t@issola.caltech.edu>
+
+	* Changed 'save_html' to default to deriving the filename from the
+	  URL (Tristan De Buysscher).
+
 2006-03-30  Titus Brown  <t@issola.caltech.edu>
 
 	* Added redirect_error, reset_error to commands.py, and
